# trace

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  INSTALL.md  MULTI_AGENT.md  QUICK_START.md  README.md  test-integration.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
src/: lib.rs  main.rs  types.rs  utils.rs
src/cli/: create.rs  dep.rs  export.rs  init.rs  learn.rs  list.rs  mod.rs  ready.rs  show.rs  stats.rs  update.rs
src/storage/: mod.rs  sqlite.rs
